fix overflow

--- a/project1/style.css
+++ b/project1/style.css
@@ -181,6 +181,8 @@ button{
     z-index:2;
     outline:solid 5px white;
     box-shadow: 0px 0px 0px 10px black inset;;
+    overflow-x:visible;
+    overflow-y:scroll;
 
 
     background-color: white;
@@ -193,6 +195,7 @@ button{
     display:flex;
 
     flex-flow:row nowrap;
+ 
     z-index:2;
     margin:7%;
     justify-content: center;
@@ -200,7 +203,8 @@ button{
 #column1, #column2 {
     display:flex;
     height:45vh;
-    flex-flow:column wrap;
+    flex-flow:column nowrap;
+
     justify-content:flex-start;
 }
 #bread, #rice, #noodle, #meat, #veggies {
@@ -208,7 +212,7 @@ button{
 }
 .menu-item{
     font-size:18px;
-    width: 20vw;
+    width: 18vw;
     cursor:pointer;
     padding: 5px;
     border:solid 2px black;
